--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 <link rel="stylesheet" href="styles/index.css">
 
 <body>
+  <div id="app">
+    <main>
+      <div class="main-container">main</div>
+    </main>
   
+    <aside>
+      <div class="aside-container">aside</div>
+    </aside>
+  </div>
+  
+
+
 </body>
 </html>
