--- a/index.html
+++ b/index.html
@@ -20,9 +20,63 @@
           <img src="assets/icons/arrow-left-02.svg" alt="Icone de voltar">
           <span>Voltar</span>
         </div>
-
         <h1>Formulario de Matrícula</h1>
         <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+
+        <form method="post" enctype="multipart/form-data">
+          <fieldset class="child-info">
+            <legend>Informações da Criança</legend>
+
+            <div class="input-wrapper">
+              <label for="fullname">Nome Completo</label>
+              <input 
+              id="fullname>" 
+              name="fullname"
+              type="text"
+              placeholder="Qual o nome da criança">
+            </div>
+
+            <div class="inpt-wrapper">
+              <label for="">Data de Nascimento</label>
+              <input 
+              type="date" 
+              name="birth"
+              id="birth" 
+              lang="pt-BR">
+            </div>
+
+            <div class="select-wrapper">
+              <label for="gender">Sexo</label>
+              <select 
+              name="gender" id="gender">
+              <option value="female">Feminino</option>
+              <option value="male">Masculino</option>
+              <option value="ma">Prefiro não responder</option>
+            </select>
+            </div>
+
+            <div class="textarea-wrapper">
+              <label for="medical-info">Informações médicas</label>
+              <textarea name="medical-info" id="medical"
+                cols="30" rows="10"
+                placeholder="A criança possui alguma condição médica que a  escola deve estar ciente? (Se sim, especifique)"
+              ></textarea>
+            </div>
+
+            <div class="droparea-wrapper">
+              <input 
+              type="file" 
+              id="file" 
+              name="file">
+              <img src="assets/icons/cloud-upload.svg" alt="">
+              <p>
+                Clique aqui para <br>
+                selecionar os arquivos
+              </p>
+            </div>
+
+          </fieldset>
+        </form>
       </div>
     </main>
   
@@ -38,7 +92,6 @@
             Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.
           </p>
         </header>
-
         <img src="assets/Illustration.svg" alt="Ilustração de um professora com crianças">
       </div>
     </aside>
