campos de informações do responsável

--- a/index.html
+++ b/index.html
@@ -122,6 +122,32 @@
             </div>
             
           </fieldset>
+
+          <fieldset class="gardian">
+            <legend>Informações do Responsável</legend>
+            <div class="input-wrapper">
+              <label for="gardian">Nome do Responsável</label>
+              <input type="text" name="gardian" id="gardian">
+              <small>Principal responsável legal e contato de emergência</small>
+            </div>
+
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="text" id="phone" name="phone"
+              placeholder="(84) 9 9197-1625">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="mail">Email</label>
+              <input type="text" id="mail" name="mail"
+              required>
+              <div>
+                <img src="assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
+                <span>Insira um e-mail válido</span>
+              </div>
+            </div>
+          </fieldset>
+        
         </form>
       </div>
     </main>
@@ -143,7 +169,5 @@
     </aside>
   </div>
   
-
-
 </body>
 </html>
